[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/graphics/objects/vortex.png" type="Texture" id=1]
[ext_resource path="res://objects/spells/Vortex.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 152.21

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.00740741, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.226196, 0.904785, 0.592661, 1, 0.136719, 0.931713, 1, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 128.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2.0
initial_velocity_random = 1.0
orbit_velocity = 5.0
orbit_velocity_random = 1.0
linear_accel = 2.0
scale = 8.0
scale_random = 1.0
color_ramp = SubResource( 3 )

[node name="Area2D" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
amount = 50
lifetime = 4.0
preprocess = 25.0
randomness = 1.0
process_material = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 7.0
autostart = true
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
